# ICObGONE

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rc  dummy_shortcut (2).lnk  dummy_shortcut.lnk
.github/workflows/: build.yml
src/: dialog.rs  exe.rs  icon.rs  main.rs  shortcut.rs  utils.rs  web_shortcut.rs
