[package]
name = "ICObGONE"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ICObGONE"
path = "src/main.rs"

[dependencies]
image = "0.24"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader"
]}
rfd = "0.14"
ico = "0.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
winres = "0.1"